PopUp quase concluido, dinâmica e envio de emails funcionando, falta apenas finalizações no css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </div>
-        <form action="https://formsubmit.co/ajax/nandozuchi07@gmail.com" method="POST">
+        <form action="https://formsubmit.co/ajax/nandozuchi07@gmail.com" method="POST" class="">
             <div class="form-container slideRight-animation">
 
                 <h1 class="form-header">
@@ -81,12 +81,10 @@
                 <div id="btm">
                     <button type="submit" class="submit-btn">Solicitar trancamento</button>
                 </div>
-
                 <div class="modal-overlay disabled" id="success-modal">
-                    <div class="modal">
-                        <p>Seu requerimento foi concluído e um e-mail para suporte foi enviado.</p>
-                        <button id="close-modal-btn">Fechar</button>
-                    </div>
+                    <h3 class="modal-text">Seu requerimento foi concluído e um e-mail para suporte o foi enviado.</h3>
+                    <h3 class="modal-text">Aguarde entrarmos em contato através do seu e-mail para saber mais sobre seu requerimento.</h3>
+                    <button id="close-modal-btn" class="close-button">Fechar</button>
                 </div>
             </div>
         </form>
