Realizando testes para integração do projeto no WordPress

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </div>
-        <form action="https://formsubmit.co/ajax/nandozuchi07@gmail.com" method="POST" class="">
+        <form action="https://formsubmit.co/ajax/nandoozorioch@gmail.com" method="POST" class="">
             <div class="form-container slideRight-animation">
 
                 <h1 class="form-header">
