--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
             font-size: 24px;
         }
 
+
         .company {
             font-size: 34px;
             text-align: left;
@@ -250,6 +251,8 @@
 
         .list {
             margin-bottom: 100px;
+            padding: 20px;
+            margin-left: 15px;
         }
 
         /*
@@ -594,8 +597,10 @@
         const express = require('express');
         const bodyParser = require('body-parser');
         const mailgun = require('mailgun-js');
+        const cors = require('cors');
 
         const app = express();
+        app.use(cors());
         const PORT = process.env.PORT || 3000;
 
         app.use(bodyParser.urlencoded({ extended: true }));
