--- a/index.html
+++ b/index.html
@@ -91,18 +91,22 @@
                 }
 
                 if (isValid) {
-                    const formData = new FormData(form);
-                    const xhr = new XMLHttpRequest();
-                    xhr.open('POST', 'https://formsubmit.co/ajax/nandoozorioch@gmail.com', true);
-                    xhr.onreadystatechange = function () {
-                        if (xhr.readyState === 4 && xhr.status === 200) {
+                    try {
+                        const formData = new FormData(form);
+                        submitBtn.disabled = true;
+                        const response = await fetch('https://formsubmit.co/ajax/nandoozorioch@gmail.com', {
+                            method: 'POST',
+                            body: formData,
+                        });
+
+                        if (response.ok) {
                             successModal.style.display = 'flex';
-                        } else if (xhr.readyState === 4 && xhr.status !== 200) {
+                        } else {
                             console.error('Erro ao enviar e-mail.');
                         }
-                    };
-
-                    xhr.send(formData);
+                    } catch (error) {
+                        console.error('Erro ao enviar e-mail.', error);
+                    }
                 }
             });
 
@@ -175,7 +179,7 @@
                     <label for="motivo">Motivo do cancelamento</label>
                     <textarea id="motivo" name="motivo" style="width: 100%; height: 80px;"></textarea>
                     <span>
-                        Motivo do cancelamento
+                        
                     </span>
                     <div class="error"></div>
                 </div>
