Alteração concluída, em análise

--- a/index.html
+++ b/index.html
@@ -695,17 +695,17 @@
         <div class="image-container">
             <h1 class="company">Codi Academy</h1>
             <br><br>
-            <p class="company">Requisitos para trancar um curso na Codi Academy</p>
+            <p class="company">Landing page cancelamento Codi Academy</p>
             <br><br><br>
             <ul class="list">
                 <li>
-                    Você pode trancar o curso por no máximo 6 meses
+                    A Codi Academy é a escola n° 1 em atendimento ao cliente de acordo com o instituto idealize
                 </li>
                 <li>
-                    Estar cursando a pelo menos 1 mês
+                    A Codi Academy oferece 24 tecnologia diversas para você destrinchar várias áreas do T.I
                 </li>
                 <li>
-                    O trancamento não pode ser feito no último mês de curso
+                    A Codi Academy é a escola n° 1 em atendimento ao cliente de acordo com o instituto previlege
                 </li>
             </ul>
         </div>
