Alterações concluídas, projeto em análise para postagem

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-navbutton-color" content="#06aa5e">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Trancamento | Codi Academy</title>
+    <title>Cancelamento | Codi Academy</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 
