Projeto concluído, página em análise para ser postada

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                 </div>
 
                 <div id="btm">
-                    <button type="submit" class="submit-btn">Solicitar trancamento</button>
+                    <button type="submit" class="submit-btn">Solicitar cancelamento</button>
                 </div>
 
                 <div class="modal-overlay disabled" id="success-modal">
