--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
                 overflow: visible;
             }
 
+            .company {
+                display: flex;
+            }
+
             .image-container>[class] {
                 transform: scale(1);
             }
