Mudanças na responsividade antes de subir a página

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             padding: 15px;
         }
 
+
         .image-container>ul {
             margin-top: 60px;
             margin-left: 50px;
@@ -228,7 +229,7 @@
         }
 
         .company {
-            font-size: 34px;
+            font-size: 44px;
             text-align: left;
             height: 70px;
             align-self: flex-start;
@@ -251,7 +252,7 @@
 
         .list {
             margin-bottom: 100px;
-            font-size: 14px;
+            font-size: 18px;
             margin-left: 50px;
         }
 
@@ -406,12 +407,16 @@
                 overflow: visible;
             }
 
-            .company {
-                display: flex;
-            }
-
             .image-container>[class] {
                 transform: scale(1);
+            }
+
+            .image-container > p {
+                font-size: 24px;
+            }
+
+            .list {
+                font-size: 16px;
             }
 
             .quote {
