Centralizar a página para responsividade mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Cancelamento | Codi Academy</title>
     <style>
+        /*adjust mobile responsivity*/
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 
         :root {
