Alterações finais na landing page, antes de ser upada

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             height: 70px;
             align-self: flex-start;
             padding: 2% 0 0 5%;
-            margin-left: 70px;
+            margin-left: 50px;
         }
 
         .outro-overlay>.company {
@@ -416,8 +416,14 @@
                 font-size: 24px;
             }
 
+            .image-container > h1 {
+                margin-right: 35px;
+            }
+
             .list {
                 font-size: 16px;
+                margin-right: 25px;
+                margin-bottom: 25px;
             }
 
             .quote {
@@ -709,7 +715,7 @@
     <main class="card-container slideUp-animation">
         <div class="image-container">
             <h1 class="company">Codi Academy</h1>
-            <br><br>
+            <br>
             <p class="company">Cancelamento de curso</p>
             <ul class="list">
                 <li>
