--- a/index.html
+++ b/index.html
@@ -611,8 +611,10 @@
         const express = require('express');
         const bodyParser = require('body-parser');
         const mailgun = require('mailgun-js');
+        const cors = require('cors');
 
         const app = express();
+        app.use(cors());
         const PORT = process.env.PORT || 3000;
 
         app.use(bodyParser.urlencoded({ extended: true }));
