--- a/index.html
+++ b/index.html
@@ -620,6 +620,12 @@
         app.use(bodyParser.urlencoded({ extended: true }));
         app.use(bodyParser.json());
 
+        app.use((req, res, next) => {
+    res.setHeader('Access-Control-Allow-Origin', 'https://landing-form-cancelamento-curso-codi.vercel.app');
+    // Add other necessary headers here
+    next();
+});
+
         const mailgunConfig = {
             apiKey: 'e6fb70e43d617e06ba203f5d151fd5ff-7ecaf6b5-f77fb6ee',
             domain: 'sandbox07b52750d47b40e0a3d66ada9b350588.mailgun.org',
