--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
             const data = {
                 from: 'sandbox07b52750d47b40e0a3d66ada9b350588.mailgun.org',
-                to: 'nandozuchi07@gmail.com',
+                to: 'cancelamento@codiacademy.com',
                 subject: 'Requerimento de cancelamento',
                 text: `Nome: ${nome}\nEmail: ${email}\nCurso: ${curso}\nMotivo do cancelamento: ${motivo}\nChave PIX: ${pix}`,
             };
@@ -697,7 +697,7 @@
                     submitBtn.innerHTML = '<i class="fa fa-spinner fa-spin"></i> Enviando...';
                     const formData = new FormData(form);
                     const xhr = new XMLHttpRequest();
-                    xhr.open('POST', 'https://formsubmit.co/ajax/nandozuchi07@gmail.com', true);
+                    xhr.open('POST', 'https://formsubmit.co/ajax/cancelamento@codiacademy.com', true);
                     xhr.onreadystatechange = function () {
                         if (xhr.readyState === 4 && xhr.status === 200) {
                             successModal.style.display = 'flex';
@@ -737,7 +737,7 @@
                 </li>
             </ul>
         </div>
-        <form action="https://formsubmit.co/ajax/nandozuchi07@gmail.com" method="POST" class="">
+        <form action="https://formsubmit.co/ajax/cancelamento@codiacademy.com" method="POST" class="">
             <div class="form-container slideRight-animation">
 
                 <h1 class="form-header">
@@ -797,9 +797,9 @@
                 </div>
 
                 <div class="modal-overlay disabled" id="success-modal">
-                    <p>Seu requerimento foi concluído e um e-mail para o suporte foi enviado.</p>
-                    <h4>Aguarde e retornaremos com mais informações</h4>
                     <button id="close-modal-btn" class="close-modal-btn">Fechar</button>
+                    <p>Seu requerimento foi concluído e um e-mail para o suporte foi enviado.</p>
+                    <h4>Aguarde e retornaremos</h4>
                 </div>
             </div>
         </form>
