Site no ar! Projeto concluído

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             overflow: hidden;
             background-color: #a243d2;
         }
-
+        /*Comment*/
 
         /* 
     MAIN(SIGN-UP CARD) SECTION
