Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         /*adjust mobile responsivity*/
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
-
+        /* done */
         :root {
             --green: rgb(33, 250, 131);
             --red: rgb(252, 86, 108);
