Corrigindo erro visual no Select

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             margin-top: 5px;
             background-color: rgba(255, 255, 255, 0);
             transition: all .5s ease-in;
-            color: var(--opac-white);
+            color: black;
             outline: none;
             /* Remova a borda padrão do select no Firefox */
         }
@@ -730,7 +730,7 @@
                     A Codi Academy é a escola n° 1 em atendimento ao cliente de acordo com o instituto idealize
                 </li><br>
                 <li>
-                    A Codi Academy oferece 24 tecnologia diversas para você destrinchar várias áreas do T.I
+                    A Codi Academy oferece 24 tecnologias diversas para você destrinchar várias áreas do T.I
                 </li><br>
                 <li>
                     Oferecemos bootcamp's, eventos, workshops, conteúdos presenciais e online para te auxiliar na conquista de sua vaga
