--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             margin-top: 5px;
             background-color: rgba(255, 255, 255, 0);
             transition: all .5s ease-in;
-            color: black;
+            color: var(--light-grey);
             outline: none;
             /* Remova a borda padrão do select no Firefox */
         }
