--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
         .input-container {
             position: relative;
+            text-color: var(--light-grey);
         }
 
         .modal-overlay {
