Corrigindo bug visual SELECT

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         .input-container {
             position: relative;
-            text-color: var(--light-grey);
+            color: var(--light-grey);
         }
 
         .modal-overlay {
