Erro visual do SELECT corrigido / Alteração pendente na página alterada

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         .input-container {
             position: relative;
-            color: var(--light-grey);
+            color: var(--light-grey); /* Alteração pendente no projeto hospedado*/
         }
 
         .modal-overlay {
