Tentando corrigir o erro no menu select - Texto das opções em branco com fundo branco

--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
             pointer-events: none;
         }
 
+
         /* Efeitos de foco e valor válido para o select */
         input:focus~span,
         input:valid~span,
@@ -766,7 +767,7 @@
                 <div class="input-container">
                     <label for="curso">Curso</label>
                     <select name="curso" id="curso" required>
-                        <option value="" disabled selected>Escolha o curso</option>
+                        <option value="" disabled selected><span>Escolha o curso</span></option>
                         <option value="frontend">Desenvolvimento FrontEnd</option>
                         <option value="backend">Desenvolvimento Backend</option>
                         <option value="fullstack">Desenvolvimento FullStack</option>
