--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                 <div class="input-container">
                     <label for="curso">Curso</label>
                     <select name="curso" id="curso" required>
-                        <option value="Selecione o curso" disabled selected></option>
+                        <option value="" disabled selected placeholder="Selecione o curso"></option>
                         <option value="frontend">Desenvolvimento FrontEnd</option>
                         <option value="backend">Desenvolvimento Backend</option>
                         <option value="fullstack">Desenvolvimento FullStack</option>
