--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         .input-container {
             position: relative;
-            color: var(--light-grey); /* Alteração pendente no projeto hospedado*/
+            color: var(--form-txt); /* Alteração pendente no projeto hospedado*/
         }
 
         .modal-overlay {
