--- a/index.html
+++ b/index.html
@@ -508,9 +508,10 @@
             border-bottom: 1px solid rgba(0, 0, 0, .4);
             padding: 6px 6px 6px 10px;
             margin-top: 5px;
-            background-color: rgba(255, 255, 255, 0);
+            background-color: var(--darky);
             transition: all .5s ease-in;
             outline: none;
+            color: var(--form-txt);
             /* Remova a borda padrão do select no Firefox */
         }
 
