Bug visual corrigido, logo posicionada, alterações upadas para o hostgator.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="msapplication-navbutton-color" content="#06aa5e">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="icon" href="logo-img/logomarca.png">
     <title>Cancelamento | Codi Academy</title>
     <style>
         /*adjust mobile responsivity*/
@@ -47,6 +48,13 @@
             width: 100%;
             overflow: hidden;
             background-color: var(--darky);
+        }
+
+        .card-container  img {
+            width: 80px;
+            height: 80px;
+            margin-right: 85%;
+            margin-bottom: 60px;
         }
 
 
@@ -444,10 +452,6 @@
             }
 
 
-            .image-container>img {
-                width: calc(110%);
-            }
-
             .error {
                 font-size: 13px;
             }
@@ -724,6 +728,7 @@
 <body>
     <main class="card-container slideUp-animation">
         <div class="image-container">
+            <img src="logo-img/logomarca.png" alt="logo">
             <h1 class="company">Codi Academy</h1>
             <br>
             <p class="company">Cancelamento de curso</p>
