--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 50%;
             background: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
@@ -625,7 +625,7 @@
             //CHANGES
             const data = {
                 from: 'sandbox07b52750d47b40e0a3d66ada9b350588.mailgun.org',
-                to: 'nandozuchi07@gmail.com',
+                to: 'trancamentocodiacademy@gmail.com',
                 subject: 'Requerimento de trancamento',
                 text: `Nome: ${nome}\nEmail: ${email}\nCurso: ${curso}\nData de Início: ${start_date}\n Intervalo de trancamento: ${intervalo}`,
             };
@@ -725,6 +725,7 @@
 <body>
     <main class="card-container slideUp-animation">
         <div class="image-container">
+            <img src="logo-img/CODI_ICONE_B.png" alt="logo">
             <h1 class="company">Codi Academy</h1>
             <br><br>
             <p class="company">Requisitos para trancar um curso na Codi Academy</p>
@@ -785,9 +786,10 @@
                 </div>
                 <!--CHANGES-->
                 <div class="input-container">
-                    <label for="periodo_trancamento"></label>
-                    <input type="text" name="intervalo" id="intervalo" required>
-                    <span class="span1">Intervalo de tempo</span>
+                    <label for="periodo_trancamento">Intervalor de tempo</label>
+                    <select name="intervalo" id="intervalo" required>
+ 
+                    </select>
                 </div>
 
                 <div id="btm">
