Cards prontos, alterando agora a lógica de integrar os formulários a planilhas do google

--- a/trancamento.html
+++ b/trancamento.html
@@ -685,7 +685,7 @@
 <body>
     <main class="card-container slideUp-animation">
         <div class="image-container">
-            <img src="CODI_ICONE_B.png" alt="logo">
+            <img src="logo-img/CODI_ICONE_B.png" alt="logo">
             <h1 class="company">&nbsp;&nbsp;&nbsp;&nbsp;Codi Academy</h1>
             <br><br>
             <p class="company">&nbsp;&nbsp;&nbsp;&nbsp;Requisitos para trancar <br>&nbsp;&nbsp;&nbsp;&nbsp;um curso na Codi Academy</p>
