Cards prontos, alterando agora a lógica de integrar os formulários a planilhas do google

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h5 class="card-title">Formulário de Cancelamento</h5>
                     <hr>
                     <p class="card-text">Para cancelar seu vínculo com a Codi Academy acesse o formulário clicando no botão abaixo</p>
-                    <button href="cancelamento.html" class="btn custom-btn">Acessar<buttona>
+                    <a href="trancamento.html" class="btn custom-btn">Acessar</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <small>Suporte Codi Academy</small>
@@ -124,7 +124,7 @@
                     <h5 class="card-title">Formulário de Trancamento</h5>
                     <hr>
                     <p class="card-text">Para trancar seu curso durante um prazo acesse o formulário clicando no botão abaixo</p>
-                    <button href="trancamento.html" class="btn custom-btn">Acessar</button>
+                    <a href="cancelamento.html" class="btn custom-btn">Acessar</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <small>Suporte Codi Academy</small>
