--- a/cancelamento.html
+++ b/cancelamento.html
@@ -627,50 +627,74 @@
                 return emailRegex.test(email);
             }
 
-            form.addEventListener('submit', async (e) => {
-                e.preventDefault();
+            const addLoading = () => {
+                submitBtn.innerHTML = '<i class="fa fa-spinner fa-spin"></i> Enviando...';
+            }
 
-                for (const errorDisplayer of errorDisplayers) {
-                    errorDisplayer.textContent = '';
-                }
+            const removeLoading = () => {
+                submitBtn.innerHTML = '<i class="fa fa-spinner fa-spin"></i> Solicitação enviada!';
 
-                let isValid = true;
-                const email = document.querySelector('#mail');
-                const selectedCurso = document.querySelector('#curso');
+            }
 
-                if (!isValidEmail(email.value)) {
-                    errorDisplayers[1].textContent = 'Por favor, insira um e-mail válido.';
-                    isValid = false;
-                }
+            const handleSubmit = (event) => {
+                event.preventDefault();
+                addLoading();
+                fetch('https://api.sheetmonkey.io/form/emqzLXP7ZePpExuzTH6Q8z', {
+                    method: 'post',
+                    headers: {
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ name: `${f - name}`, email: `${mail}`, curso: `${curso}`, motivo: `${motivo}`, chavePix: `${pix}` })
+                }).then(removeLoading())
+            }
 
-                if (selectedCurso.value === '') {
-                    errorDisplayers[2].textContent = 'Por favor, escolha um curso.';
-                    isValid = false;
-                }
-
-                if (isValid) {
-                    submitBtn.classList.add('Disabled');
-                    submitBtn.innerHTML = '<i class="fa fa-spinner fa-spin"></i> Enviando...';
-                    const formData = new FormData(form);
-                    const xhr = new XMLHttpRequest();
-                    xhr.open('POST', 'https://formsubmit.co/ajax/cancelamento@codiacademy.com', true);
-                    xhr.onreadystatechange = function () {
-                        if (xhr.readyState === 4 && xhr.status === 200) {
-                            successModal.style.display = 'flex';
-                        } else if (xhr.readyState === 4 && xhr.status !== 200) {
-                            console.error('Erro ao enviar e-mail.');
-                        }
-                    };
-
-                    xhr.send(formData);
-                }
-            });
-
-            closeModalBtn.addEventListener('click', () => {
-                successModal.style.display = 'none';
-                location.reload();
-            });
+            form.addEventListener('submit', handleSubmit());
         });
+        //     form.addEventListener('submit', async (e) => {
+        //         e.preventDefault();
+
+        //         for (const errorDisplayer of errorDisplayers) {
+        //             errorDisplayer.textContent = '';
+        //         }
+
+        //         let isValid = true;
+        //         const email = document.querySelector('#mail');
+        //         const selectedCurso = document.querySelector('#curso');
+
+        //         if (!isValidEmail(email.value)) {
+        //             errorDisplayers[1].textContent = 'Por favor, insira um e-mail válido.';
+        //             isValid = false;
+        //         }
+
+        //         if (selectedCurso.value === '') {
+        //             errorDisplayers[2].textContent = 'Por favor, escolha um curso.';
+        //             isValid = false;
+        //         }
+
+        //         if (isValid) {
+        //             submitBtn.classList.add('Disabled');
+        //             submitBtn.innerHTML = '<i class="fa fa-spinner fa-spin"></i> Enviando...';
+        //             const formData = new FormData(form);
+        //             const xhr = new XMLHttpRequest();
+        //             xhr.open('POST', 'https://formsubmit.co/ajax/cancelamento@codiacademy.com', true);
+        //             xhr.onreadystatechange = function () {
+        //                 if (xhr.readyState === 4 && xhr.status === 200) {
+        //                     successModal.style.display = 'flex';
+        //                 } else if (xhr.readyState === 4 && xhr.status !== 200) {
+        //                     console.error('Erro ao enviar e-mail.');
+        //                 }
+        //             };
+
+        //             xhr.send(formData);
+        //         }
+        //     });
+
+        //     closeModalBtn.addEventListener('click', () => {
+        //         successModal.style.display = 'none';
+        //         location.reload();
+        //     });
+        // });
     </script>
 
 </head>
@@ -695,7 +719,7 @@
                 </li>
             </ul>
         </div>
-        <form action="" method="" class="">
+        <form action="//api.sheetmonkey.io/form/emqzLXP7ZePpExuzTH6Q8z" method="post">
             <div class="form-container slideRight-animation">
 
                 <h1 class="form-header">
@@ -753,6 +777,8 @@
                 <div id="btm">
                     <button type="submit" class="submit-btn">Solicitar cancelamento</button>
                 </div>
+
+                <input type="hidden" name="x-sheetmonkey-redirect"  value="https://landing-form-cancelamento-curso-codi.vercel.app/"/>
 
                 <div class="modal-overlay disabled" id="success-modal">
                     <p>Seu requerimento foi concluído e um e-mail para o suporte foi enviado.</p>
