Projeto com alterações implementadas

--- a/cancelamento.html
+++ b/cancelamento.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#06aa5e">
     <meta name="msapplication-navbutton-color" content="#06aa5e">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" href="logo-img/logomarca.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Cancelamento | Codi Academy</title>
     <style>
@@ -225,7 +226,7 @@
 
 
         .image-container>ul {
-            margin-top: 60px;
+            margin-top: 25px;
             margin-left: 50px;
             padding: 30px;
         }
