--- a/trancamento.html
+++ b/trancamento.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-navbutton-color" content="#06aa5e">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="icon" src="logomarca.png">
+    <link rel="icon" src="logo-img/logomarca.png">
     <title>Trancamento | Codi Academy</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
@@ -217,11 +217,11 @@
             place-items: center;
             background-color: #a243d2;
             color: white;
-            padding: 15px;
+            padding: 10px;
         }
 
         .image-container>ul {
-            margin-top: 60px;
+            margin-top: 15px;
             margin-left: 10px;
             padding: 30px;
         }
@@ -236,7 +236,7 @@
         }
 
         .company {
-            font-size: 34px;
+            font-size: 30px;
             text-align: left;
             height: 70px;
             align-self: flex-start;
@@ -253,12 +253,7 @@
             display: none;
         }
 
-        .company p {
-            margin-bottom: 200px;
-        }
-
         .list {
-            margin-bottom: 100px;
             font-size: 14px;
         }
 
@@ -717,10 +712,10 @@
             <ul class="list">
                 <li>
                     Você pode trancar o curso por 3, 6, 9 ou 12 meses
-                </li>
+                </li><br>
                 <li>
                     Estar cursando a pelo menos 1 mês
-                </li>
+                </li><br>
                 <li>
                     O trancamento não pode ser feito no último mês de curso
                 </li>
